<resources>
    <string name="app_name">LyncWyze</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="profile_button">All details</string>
    <string name="my_children">My Children</string>
    <string name="text_referral_from">"Referral from: "</string>
    <string name="welcome_message">Welcome!</string>
    <string name="schedule_a_ride">Schedule A Ride</string>
    <string name="ride_given">Ride Given</string>
    <string name="ride_taken">Ride Taken</string>
    <string name="pounds_of_co2_saved">Pounds of CO2 Saved</string>
    <string name="back_button_description">Back button</string>
    <string name="notify_me">Notify me</string>
    <string name="email_address">Email Address</string>
    <string name="label_email_address">Email Address <font color='#FF0000'>*</font></string>
    <string name="label_full_name">Full Name <font color='#FF0000'>*</font></string>
    <string name="example_full_name">Full Name</string>
    <string name="let_us_know_how_to_properly_address_you">Let us know how to properly address you</string>
    <string name="notify_me_screen_message">Pre-register for free ride credits when we launch the full app</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="warn_empty_phone">Please enter phone number.</string>
    <string name="warn_invalid_phone">Please enter a valid Phone.</string>
    <string name="warn_empty_email">Please enter a email address.</string>
    <string name="warn_invalid_email">Please enter a valid email address.</string>
    <string name="warn_empty_password">Please enter password.</string>
    <string name="warn_invalid_password">Please enter valid password.</string>
    <string name="warn_enter_email">Please enter your email address.</string>
    <string name="want_enter_full_name">Please enter your full name.</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="unable_to_save">Unable to save!</string>
    <string name="notified_availability_ms">Get Notified of Our Availability.</string>
    <string name="notified_availability_message">We\'ll notify you as soon as we\'re available in your area.</string>
    <string name="mobile_number">Phone Number</string>
    <string name="select_country_and_enter_your_phone_number">Select country and enter your phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="example_phone_number">1234-567</string>
    <string name="label_phone_number">Phone number <font color='#FF0000'>*</font></string>
    <string name="continueTxt">Continue</string>
    <string name="or_Txt">Or</string>
    <string name="ok_Txt">OK</string>
    <string name="enter_verification_code">Enter Verification code</string>
    <string name="sent_on_your_mobile_number">Sent on your phone number:</string>
    <string name="did_not_receive_the_code_yet">Did not receive the code yet?</string>
    <string name="resend_new_verification_code">Resend new Verification code</string>
    <string name="enter_password">Enter password</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="unsatisfied">Unsatisfied</string>
    <string name="create_profile">Create Profile</string>
    <string name="label_last_four_digits_of_ssn">Last 4 Digits of SSN <font color='#FF0000'>*</font></string>
    <string name="last_four_digits_of_ssn">Last 4 Digits of SSN</string>
    <string name="warn_last_four_digits_of_ssn">Please provide last 4 digits of SSN</string>
    <string name="warn_empty_last_name">Last name cannot be empty</string>
    <string name="last_name">Last Name</string>
    <string name="label_last_name">Last Name <font color='#FF0000'>*</font></string>
    <string name="warn_empty_first_name">First name cannot be empty</string>
    <string name="first_name">First Name</string>
    <string name="label_first_name">First Name <font color='#FF0000'>*</font></string>
    <string name="create_your_profile">Create your Profile</string>
    <string name="password_strength">Password Strength</string>
    <string name="contains_uppercase_letter">Contains uppercase letter</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="contains_a_number_or_special_character">Contains a number or special character</string>
    <string name="strong">Strong</string>
    <string name="background_verification">License details</string>
    <string name="your_ssn">Your SSN</string>
    <string name="driver_license_capture_photo">Driver License - Capture Photo</string>
    <string name="dl000000000000" translatable="false">DL000000000000</string>
    <string name="license_number">License number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="address">Address</string>
    <string name="home_address">Home Address</string>
    <string name="select_home_address_and_city">Select Home Address and City</string>
    <string name="enter_your_home_address">Enter your home address</string>
    <string name="background_image">Background image</string>
    <string name="location_icon">Location icon</string>
    <string name="please_select_a_location">Please select a location</string>
    <string name="error_txt">Error: </string>
    <string name="exception_collen">Exception: %1$s</string>
    <string name="profile_successfully_created">Profile Successfully Created</string>
    <string name="_01_jan_2030">2030-01-30</string>
    <string name="please_add_emergency_contact">Please add emergency contact</string>
    <string name="error_getting_child_id">Error getting child id</string>
    <string name="error_getting_contact_id">Error getting contact id</string>
    <string name="activity_details">Activity Details</string>
    <string name="giver">Giver</string>
    <string name="taker">Taker</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="add_more_activity">Add More Activity</string>
    <string name="add_child">Add Child</string>
    <string name="no_activity_found">No Activity Found</string>
    <string name="no_activity_found_for">No Activity Found for</string>
    <string name="no_child_added">No Child Added</string>
    <string name="save">Save</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="maker">Maker <font color='#FF0000'>*</font></string>
    <string name="enter_your_car_model">Enter Your Car Model</string>
    <string name="select_your_car_modal">Enter Your Car Modal</string>
    <string name="is_this_your_primary_vehicle">Is this your Primary Vehicle?</string>
    <string name="alias">Alias</string>
    <string name="please_enter_an_alias_for_the_vehicle">Please enter an alias for the vehicle.</string>
    <string name="modal">Modal <font color='#FF0000'>*</font></string>
    <string name="your_vehicle_maker">Maker of your vehicle</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="by_default_with_model_number">By Default with Model Number</string>
    <string name="by_default_with_modal_number">By Default with Modal Number</string>
    <string name="exterior_colours">Exterior colours</string>
    <string name="license_plate">License Plate <font color='#FF0000'>*</font></string>
    <string name="body_color">Body Color <font color='#FF0000'>*</font></string>
    <string name="truck">Truck</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="body_style">Body Style <font color='#FF0000'>*</font></string>
    <string name="logout">Logout</string>
    <string name="text_1">Text 1</string>
    <string name="text_2">Text 2</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
</resources>