<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".enteredUser.vehicles.Activity_Vehicle_Add">

    <FrameLayout android:id="@+id/vaBackButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageButton android:id="@+id/vaBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/back_arrow"
            app:tint="?android:attr/textColorPrimary" />
        <ImageButton android:id="@+id/logoutButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/logout"
            android:src="@drawable/logout_icon" />
    </FrameLayout>

    <ScrollView android:id="@+id/vlScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@+id/vaBackButtonContainer"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:orientation="vertical" >

            <TextView android:text="@string/vehicle_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />

            <TextView android:text="@string/maker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <EditText android:id="@+id/inputMaker"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/rounded_background"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorSecondary"
                android:hint="@string/your_vehicle_maker"/>

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <TextView android:text="@string/modal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <EditText android:id="@+id/inputVehicleModel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/rounded_background"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorSecondary"
                android:hint="@string/enter_your_car_model" />

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <TextView android:text="@string/body_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <RadioGroup android:id="@+id/vaRadioGroupVehicleType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical">
                <RadioButton android:id="@+id/radioSUV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="SUV"
                    android:text="@string/suv"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/poppins"/>
                <RadioButton android:id="@+id/radioSedan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="SEDAN"
                    android:text="@string/sedan"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/poppins" />
                <RadioButton android:id="@+id/radioTruck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="TRUCK"
                    android:text="@string/truck"
                    android:textColor="?android:attr/textColorPrimary"
                    android:fontFamily="@font/poppins" />
            </RadioGroup>

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <TextView android:text="@string/body_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <EditText
                android:id="@+id/inputVehicleColor"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/rounded_background"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorSecondary"
                android:hint="@string/exterior_colours"/>

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <TextView android:text="@string/license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <EditText android:id="@+id/inputVehicleLicensePlate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/rounded_background"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorSecondary"
                android:hint="@string/by_default_with_model_number"/>

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <TextView android:text="@string/alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <Space android:layout_width="match_parent" android:layout_height="4dp" />
            <EditText android:id="@+id/inputVehicleAlias"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/rounded_background"
                android:textColor="?android:attr/textColorPrimary"
                android:textColorHint="?android:attr/textColorSecondary"
                android:hint="@string/please_enter_an_alias_for_the_vehicle" />

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <CheckBox android:id="@+id/checkboxPrimaryVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:attr/textColorPrimary"
                android:text="@string/is_this_your_primary_vehicle" />

            <Space android:layout_width="match_parent" android:layout_height="8dp" />
            <Button android:id="@+id/vaSaveButton"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:enabled="true"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@android:color/white"
                android:stateListAnimator="@null"
                android:backgroundTint="@color/primary"/>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>