<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/bottomSheetText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/text_1"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/bottomSheetText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/text_2"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bottomSheetButton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_1"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/bottomSheetButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_2"
            android:layout_margin="8dp"/>
    </LinearLayout>

</LinearLayout>